--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,23 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+/* Scrollbar styles */
+::-webkit-scrollbar {
+    width: 3px;
+}
+  
+::-webkit-scrollbar-track {
+    background: #dfd5d5;
+    border-radius: 10px;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: #6c5e5e;
+    border-radius: 10px;
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(165, 156, 156);
+}
