--- a/src/app/modules/commit/commit.component.html
+++ b/src/app/modules/commit/commit.component.html
@@ -1,1 +1,69 @@
-<p>commit works!</p>
+<mat-tab-group
+	(selectedIndexChange)="selected.setValue($event)"
+	mat-stretch-tabs="false"
+	mat-align-tabs="center">
+	<mat-tab label="Frontend">
+		<ng-container *ngTemplateOutlet="tableTemplate; context: ctx"></ng-container>
+	</mat-tab>
+	<mat-tab label="Backend">
+		<ng-container *ngTemplateOutlet="tableTemplate; context: ctx"></ng-container>
+	</mat-tab>
+
+	<ng-template #tableTemplate let-commits="commitsContext">
+		<section class="table-section">
+			<table mat-table [dataSource]="datasource" class="mat-elevation-z8">
+			
+				<!-- Sha Column -->
+				<ng-container matColumnDef="sha">
+					<th mat-header-cell *matHeaderCellDef>SHA</th>
+					<td 
+						mat-cell
+						*matCellDef="let element"
+						[matTooltip]="element.sha"
+						[matTooltipPosition]="'above'">
+						{{element.sha | slice:0:5}}...
+					</td>
+				</ng-container>
+			
+				<!-- Message Column -->
+				<ng-container matColumnDef="message">
+					<th mat-header-cell *matHeaderCellDef>Message</th>
+					<td mat-cell *matCellDef="let element">
+						<span class="message-item">
+							{{element.message}}
+							<a target="_blank" [href]="element.commitUrl">
+								<mat-icon class="material-symbols-outlined">
+									open_in_new
+								</mat-icon>
+							</a>
+						</span>
+					</td>
+				</ng-container>
+			
+				<!-- Date Column -->
+				<ng-container matColumnDef="date">
+					<th mat-header-cell *matHeaderCellDef>Date</th>
+					<td mat-cell *matCellDef="let element"> {{element.date | date:'dd-MM-yyyy'}} </td>
+				</ng-container>
+			
+				<!-- Author Column -->
+				<ng-container matColumnDef="author">
+					<th mat-header-cell *matHeaderCellDef>Author</th>
+					<td
+						mat-cell
+						*matCellDef="let element"
+						[matTooltip]="element.author.email"
+						[matTooltipPosition]="'above'">
+						<span class="avatar-span">
+							<img class="avatar" [src]="element.author.avatar" alt="Profile img">
+							{{element.author.login}}
+						</span>
+						</td>
+				</ng-container>
+			
+				<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+				<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+			</table>
+		</section>
+	</ng-template>
+</mat-tab-group>
