--- a/src/app/modules/commit/commit.component.scss
+++ b/src/app/modules/commit/commit.component.scss
@@ -29,3 +29,9 @@ mat-icon {
     font-size: 15px;
     margin-left: 10px;
 }
+
+mat-spinner {
+    margin: 25px auto;
+    width: 40px !important;
+    height: 40px !important;
+}
