--- a/src/app/modules/commit/commit.component.scss
+++ b/src/app/modules/commit/commit.component.scss
@@ -35,3 +35,24 @@ mat-spinner {
     width: 40px !important;
     height: 40px !important;
 }
+
+.filter-span {
+    display: flex;
+    justify-content: center;
+}
+
+.input {
+    width: 100%;
+    margin: 20px;
+    max-width: 300px;
+    height: 40px;
+    line-height: 28px;
+    padding: 0 1rem;
+    padding-left: 2rem;
+    border: 2px solid transparent;
+    border-radius: 8px;
+    outline: none;
+    background-color: #f3f3f4;
+    color: #0d0c22;
+    transition: .3s ease;
+}
